// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Webex Meeting Control component snapshot matches with active icon button 1`] = `
<Button
  active={false}
  ariaLabel="Mute"
  ariaLabelledBy=""
  circle={true}
  className=""
  color="red"
  containerLarge={false}
  disabled={false}
  expand={false}
  href=""
  index={null}
  isButtonGroup={false}
  label=""
  large={false}
  loading={false}
  onClick={[Function]}
  removeStyle={false}
  size={56}
  style={Object {}}
  tag="button"
  type="button"
>
  <Icon
    append={false}
    ariaLabel={null}
    buttonClassName=""
    className=""
    color=""
    description=""
    isAria={true}
    name="microphone_28"
    onClick={null}
    prepend={false}
    size={null}
    sizeOverride={false}
    style={null}
    title=""
    type=""
  />
</Button>
`;

exports[`Webex Meeting Control component snapshot matches with disabled icon button 1`] = `
<Button
  active={false}
  ariaLabel="Mute disabled"
  ariaLabelledBy=""
  circle={true}
  className=""
  color=""
  containerLarge={false}
  disabled={true}
  expand={false}
  href=""
  index={null}
  isButtonGroup={false}
  label=""
  large={false}
  loading={false}
  onClick={[Function]}
  removeStyle={false}
  size={56}
  style={Object {}}
  tag="button"
  type="button"
>
  <Icon
    append={false}
    ariaLabel={null}
    buttonClassName=""
    className=""
    color=""
    description=""
    isAria={true}
    name="microphone_28"
    onClick={null}
    prepend={false}
    size={null}
    sizeOverride={false}
    style={null}
    title=""
    type=""
  />
</Button>
`;

exports[`Webex Meeting Control component snapshot matches with disabled text button 1`] = `
<Button
  active={false}
  ariaLabel="Join meeting disabled"
  ariaLabelledBy=""
  circle={false}
  className=""
  color="green"
  containerLarge={false}
  disabled={true}
  expand={false}
  href=""
  index={null}
  isButtonGroup={false}
  label=""
  large={false}
  loading={false}
  onClick={[Function]}
  removeStyle={false}
  size={52}
  style={Object {}}
  tag="button"
  type="button"
>
  Join meeting
</Button>
`;

exports[`Webex Meeting Control component snapshot matches with inactive icon button 1`] = `
<Button
  active={false}
  ariaLabel="Unmute"
  ariaLabelledBy=""
  circle={true}
  className=""
  color=""
  containerLarge={false}
  disabled={false}
  expand={false}
  href=""
  index={null}
  isButtonGroup={false}
  label=""
  large={false}
  loading={false}
  onClick={[Function]}
  removeStyle={false}
  size={56}
  style={Object {}}
  tag="button"
  type="button"
>
  <Icon
    append={false}
    ariaLabel={null}
    buttonClassName=""
    className=""
    color=""
    description=""
    isAria={true}
    name="microphone-mute_28"
    onClick={null}
    prepend={false}
    size={null}
    sizeOverride={false}
    style={null}
    title=""
    type=""
  />
</Button>
`;

exports[`Webex Meeting Control component snapshot matches with text button 1`] = `
<Button
  active={false}
  ariaLabel="Join meeting"
  ariaLabelledBy=""
  circle={false}
  className=""
  color="green"
  containerLarge={false}
  disabled={false}
  expand={false}
  href=""
  index={null}
  isButtonGroup={false}
  label=""
  large={false}
  loading={false}
  onClick={[Function]}
  removeStyle={false}
  size={52}
  style={Object {}}
  tag="button"
  type="button"
>
  Join meeting
</Button>
`;
